--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,10 +4,11 @@ version: '{branch}-{build}'
 environment: 
   matrix: 
     - platform: x86 
-      SOURCE: "https://neon.se/idris/idris-win32-0.9.20.zip"
+      SOURCE: "https://neon.se/idris/idris-0.9.20-win32.zip"
       DEST: "idris.zip"
+      
     - platform: x64 
-      SOURCE: "https://neon.se/idris/idris-win64-0.9.20.zip"
+      SOURCE: "https://neon.se/idris/idris-0.9.20-win64.zip"
       DEST: "idris.zip"
 
 install:
